add notebook header and install instructions

--- a/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
@@ -30,7 +30,20 @@ knit: (function(inputFile, encoding) {
 
 <!-- Download a copy of this file with rcell2.cellid::get_workflow_template_cellid() -->
 
-# Setup
+# Installation
+
+The `rcell2-cellid` package can be installed directly from [its git repository](https://github.com/darksideoftheshmoo/rcell2-cellid) by running the following:
+
+```{r}
+# The remotes package is required to install R packages from git.
+if (!requireNamespace("remotes", quietly = TRUE))
+  install.packages("remotes")
+
+# Our lab's GitHub organizacion lives at https://github.com/darksideoftheshmoo/
+remotes::install_github("darksideoftheshmoo/rcell2-cellid")
+```
+
+# Notebook Setup
 
 ```{r setup, include=FALSE}
 # Set chunk options
