split quick start and full guides

--- a/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/rmd_template.cellid/skeleton/skeleton.Rmd
@@ -71,279 +71,15 @@ library(tidyverse)  # import numpy as np (?)
 
 # Introduction
 
-This notebook contains a minimal [Example workflow], with a broad overview of the pipeline,
-and a [Usage guide] with in-depth explanations and advanced usage examples.
+This notebook contains a [Usage guide] with in-depth explanations and advanced usage examples.
+
+There is another "quick start" notebook bundled with the package.
 
 ## Friendly reminder
 
 - **Read this notebook carefully**.
 - Use the **help page** of functions before using them. Open help pages with R's `?` (e.g. `?arguments`).
 - Read the README.md at rcell2's [GitHub repo](https://github.com/darksideoftheshmoo/rcell2/).
-
-## Example workflow
-
-This is only meant as a quick example.
-
-For full usage details, skip to the [Usage guide] section of this notebook, 
-and read it carefully.
-
-Always read the `?help` before using a function ;) specially when they do file operations,
-which are irreversible.
-
-This example uses:
-
-* Image examples from the `rcell2.examples` package.
-* Images and filenames in time-course experiment "format": `BF_Position001_time01.tif`
-* Default CellID segmentation parameters.
-* The built-in CellID binary.
-
-### Images directory
-
-First point R to the folder containing the images. This notebook obeys the path
-specified in the `data.dir` variable. Make sure to assign its value once, or 
-double-check before overwriting it.
-
-In this example we install and use a set from the "examples" package. A more
-detailed explanation is available in the [Path to the dataset] section of
-this notebook.
-
-```{r}
-if(!requireNamespace("remotes")){
-  # Install the "remotes" package if not found:
-  install.packages("remotes")
-}
-
-if(!requireNamespace("rcell2.examples")){
-  # Install the "rcell2.examples" package if not found:
-  remotes::install_github("darksideoftheshmoo/rcell2.examples")
-}
-
-# Example: Choose one set of example images:
-data.dir <- system.file("extdata/sample_datasets/sample_time_series/",
-                        package = "rcell2.examples")
-# List image files in the set:
-dir(data.dir)
-```
-
-### Naming images for Cell-ID
-
-Images output by the acquisition software may result in file
-names different from the default style (i.e `YFP_Position01_time1.tif`, and so on).
-The default pattern is described at the [Image file names] section of this notebook.
-
-The `rename_mda` function will help you rename file names to match that pattern.
-The function is provided by the `rcell2.cellid` package. A full example on how to
-use it is available below, in the [Renaming images] section of this notebook.
-
-### Run Cell-ID
-
-1. Customize parameters for CellID.
-
-```{r}
-# Create a list of parameters with default values.
-parameters.list <- rcell2.cellid::parameters_default()
-
-# Write the parameters to a plain-text file, and save its path.
-parameters.txt <- rcell2.cellid::parameters_write(parameters.list)
-```
-
-> Note: segmentation parameters for Cell-ID and criteria to customize them
-> are discussed in the [Parameters] section of this notebook.
-
-2. Prepare the "arguments" dataframe for CellID, which lists the image files that match
-   the regular expression specified in `file.pattern`.
-
-```{r}
-# Gather images
-cellid.args <- 
-  rcell2.cellid::arguments(path = data.dir, 
-                           parameters = parameters.txt)
-```
-
-> Note: the default file pattern will match file names that match de default pattern
-> (described in the [Image file names] section). Alternative patterns are discussed
-> in the [Arguments] section.
-
-3. Run Cell-ID with the built-in executable:
-
-```{r eval=F}
-cell2.out <- 
-  rcell2.cellid::cell2(arguments = cellid.args,
-                       # progress = T,  # Progress bar (requires doSnow).
-                       # cell.command = "~/Software/cellID-linux/cell",  # You may use an external executable.
-                       output_coords_to_tsv = T  # Optional! Only works with newer CellID (>= 1.5).
-                       )
-```
-
-The returned dataframe contains the following information:
-
-- The return status of each Cell-ID process (zero if successful).
-- The shell command used to run each Cell-ID process (can be used outside R).
-- Paths to log files with information about the execution.
-
-```{r eval=F}
-# Check the output messages:
-cell2.out
-```
-
-> Note: we suggest that you check your images before segmentation, as shown in the
-> [Preview images in ImageJ] section. It may be critical to optimize parameters on a subset of 
-> images, before processing the whole experiment, as shown in the [Tuning parameters] 
-> section.
-
-### Load the output
-
-The output tables can be loaded with `get_cell_data` provided by this package.
-
-```{r eval=F}
-# Load output
-cell.data <- get_cell_data(path = data.dir)
-```
-
-> Note: detailed usage of this function is described at the [Output data] section of this
-> notebook.
-
-`rcell2.cellid` can also load the cell boundaries and interior pixels coordinates,
-if either `output_coords_to_tsv` or `encode_cellID_in_pixels` were set to `TRUE`
-when Cell-ID was run.
-
-To load the boundary pixels, use the `cell.load.boundaries`:
-
-```{r eval=F}
-# Useful if either "output_coords_to_tsv" or "encode_cellID_in_pixels" were TRUE in cell().
-cell.boundaries <- 
-  cell.load.boundaries(data_source = "masks.tsv",
-                       positions = cell.data$positions,
-                       pixel.type = "b")
-```
-
-> This data is only available if `cell2` was run with `output_coords_to_tsv = T`.
-
-> Note: `rcell2` provides the `load_cell_data` and `cell.load.boundaries` functions,
-> to load the measurements and cell boundary pixels, respectively.
-
-### Understanding the data
-
-Access the main output data and plot:
-
-```{r}
-cdata <- cell.data$data
-
-cdata %>% ggplot(aes(a.tot, fft.stat)) + 
-  geom_point() + facet_grid(t.frame~pos)
-```
-
-> Note: the "c" in "cdata" stands for _cell_ data.
-
-Output variables are described by this documentation function:
-
-```{r}
-rcell2.cellid::output_help_df
-```
-
-Plot cell boundaries:
-
-```{r}
-cell.boundaries %>% 
-  group_by(pos) %>% filter(cellID == 0) %>% 
-  filter(pixtype == "b") %>% 
-  ggplot(aes(x,y,color=factor(t.frame)))+
-  geom_path()+
-  facet_wrap(~pos, scales = "free") + theme(aspect.ratio = 1)
-```
-
-> This data is only available if `cell2` has been run with `output_coords_to_tsv = T`.
-
-### Load position metadata
-
-This step is optional, but also part of our usual workflow.
-
-The `pdata` CSV file holds information about how the cells
-of each position (and time) were prepared and treated.
-
-Get the path to the file:
-
-```{r}
-# pdata_path <- "path/to/your/pdata.csv"
-pdata_path <- dir(data.dir, "pdata.csv", full.names = T)  # Sample pdata
-
-pdata_path
-```
-
-Load "pdata":
-
-```{r}
-# It is a "metadata" dataframe we usually join to cdata by "position" and/or "t.frame",
-# which contains other experimental variables: simuli concentrations, notes, etc.
-pdata <- readr::read_csv(pdata_path)
-
-pdata
-```
-
-> Note: the "p" in "pdata" stands for microscope _position_ data.
-
-This table is usually joined to cdata by position (and time frame if available).
-
-> Warning: `load_cell_data` does the following automatically if a pdata.csv file is found next to the images.
-> If it were the case, you shouldn't run the join again.
-
-```{r eval=F}
-cdata <- left_join(cdata, pdata)
-```
-
-### Save and restore progress
-
-We recommend saving the current state at this point.
-
-```{r eval=F}
-# Save all variables to a Rdata file.
-save.image("01-segmentation_results.Rdata")
-```
-
-The workspace image may be restored later on:
-
-```{r eval=F}
-# Restore all variables from the Rdata file.
-load("01-segmentation_results.Rdata")
-```
-
-### Advanced tools
-
-#### Cell Magick
-
-You may want to check out the Shiny/Magick rcell2 analisys package!
-
-It provides functions to manipulate images of single cells into strips, mosaics,
-and plots. It has it's own notebook with full examples and explanations.
-
-Execute the following to install the package.
-
-```{r eval=F}
-if(!requireNamespace("rcell2.magick")) remotes::install_github("darksideoftheshmoo/rcell2-magick")
-```
-
-Run the following to open package's notebook:
-
-```{r}
-rcell2.magick::get_workflow_template_magick()
-```
-
-Alternatively, run the following line-by-line, to preview its features.
-
-```{r eval=F}
-# Images data.frame
-images <- cell.data$images
-
-# Pics
-cdata %>% filter(fft.stat < 0.3, el.p > 0.8) %>% 
-  rcell2.magick::magickCell(images)
-
-# Plot
-rcell2.magick::cellSpreadPlot(cdata, images)
-
-# App
-rcell2.magick::shinyCell(cdata, paths = images)
-```
 
 # Usage guide
 
